--- a/public/templates/trip.html
+++ b/public/templates/trip.html
@@ -1,14 +1,16 @@
-<div id="trip-header">
-	<div id="trip-description" class="container">
-		<div>{{tripDistance}} miles • {{tripCities}} cities • <a ng-href="{{tripMap}}">Map</a></div>
-	</div>
-</div>
 
-<div id="trip-photos" class="container">
+<div ng-show="tripData" class="container">
+
+	<div id="trip-description">
+		<p>From <strong>{{tripStops[0].name}}</strong> to <strong>{{tripStops[tripCities-1].name}}</strong></p>
+		<p>Covers {{tripDistance}} miles</p>
+		<p>Passes {{tripCities}} cities</p>
+	</div>
+
+
 	<div class="stop-section" ng-repeat="stop in tripStops">
-		<div class="photos">
 		<div class="section-info">{{stop.name}}</div>
-		<a ng-repeat="photo in stop.photos" ng-href="{{photo.flickrURL}}"><div class="image" back-img="{{photo.imageURL}}"></div></a>
+		<div class="no-image-gap"><a ng-repeat="photo in stop.photos" ng-href="{{photo.flickrURL}}"><div class="image" back-img="{{photo.imageURL}}"></div></a>
 		<div> 
 	</div>
   </div>
