--- a/public/templates/form.html
+++ b/public/templates/form.html
@@ -17,6 +17,9 @@
 		</form>
 	</div>
 	<div class="row">
+		<div id="speech"></div>
+	</div> 	
+	<div class="row">
 		<div id="facing-car"></div>
 	</div> 
 </div>
